[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", features = ["mem"]}

[profile.dev]
overflow-checks = false
lto = true
panic = "abort"
strip = true
codegen-units = 1

[profile.release]
overflow-checks = false
lto = true
panic = "abort"
strip = true
opt-level = "z"
codegen-units = 1
